# bits-mlops-assignment-iris

./: .dockerignore  .dvcignore  .gitignore  DASHBOARD_SETUP.md  DVC_SETUP.md  Dockerfile  PROJECT_SUMMARY.md  README.md  README_new.md  demo-with-dashboard.bat  demo.bat  demo_notebook.ipynb  deploy.ps1  deploy.sh  docker-compose.yml  dvc.yaml  dvc_demo.bat  dvc_demo.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  run_docker.bat  run_pipeline.bat  setup_ci.py  setup_pipeline.py  start_api.py
.github/workflows/: ci-cd.yml
data/: iris_raw.csv.dvc  scaler.pkl  y_test.npy  y_train.npy
grafana/dashboards/: iris-mlops-dashboard.json
models/: best_model_model.pkl  best_model_model.pkl.dvc
notebooks/: iris_eda.ipynb
src/api/: main.py
src/data/: data_loader.py
src/models/: train.py
src/monitoring/: monitor.py
tests/: conftest.py  test_api.py  test_data_loader.py
